<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.i001114.quiz1.MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/darker_gray">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/clash"/>
                    <TextView
                        android:id="@+id/Titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/logo1"
                        android:layout_toRightOf="@+id/logo1"
                        android:text="@string/item1"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/Titulo"
                        android:layout_toEndOf="@+id/logo1"
                        android:layout_toRightOf="@+id/logo1"
                        android:text="@string/item2"
                        android:textColor="@android:color/darker_gray"
                        android:layout_alignBottom="@+id/logo1" />
                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo1"
                        android:background="@drawable/img"/>
                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:columnCount="3"
                        android:layout_margin="5dp"
                        android:layout_toRightOf="@id/image1"
                        android:layout_alignParentBottom="true">
                        <TextView
                            android:id="@+id/txt_3"
                            android:text="@string/gd_1"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                        <TextView
                            android:id="@+id/txt_4"
                            android:text="@string/gd_2"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                        <TextView
                            android:id="@+id/txt_5"
                            android:text="@string/gd_3"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                    </GridLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/image1"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item3"
                            android:layout_centerInParent="true"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:layout_margin="10dp"/>



                    </LinearLayout>




                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/logo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/dream"/>
                    <TextView
                        android:id="@+id/Titulo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/logo2"
                        android:layout_toRightOf="@+id/logo2"
                        android:text="@string/item5"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/Titulo2"
                        android:layout_toEndOf="@+id/logo2"
                        android:layout_toRightOf="@+id/logo2"
                        android:text="@string/item2"
                        android:textColor="@android:color/darker_gray"
                        android:layout_alignBottom="@+id/logo2" />
                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo2"
                        android:background="@drawable/img"/>
                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:columnCount="3"
                        android:layout_margin="5dp"
                        android:layout_toRightOf="@id/image2"
                        android:layout_alignParentBottom="true">
                        <TextView
                            android:id="@+id/txt_6"
                            android:text="@string/gd_1"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                        <TextView
                            android:id="@+id/txt_7"
                            android:text="@string/gd_2"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                        <TextView
                            android:id="@+id/txt_8"
                            android:text="@string/gd_3"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                    </GridLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/image2"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item3"
                            android:layout_centerInParent="true"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:layout_margin="10dp"/>



                    </LinearLayout>




                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/logo3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/clash"/>
                    <TextView
                        android:id="@+id/Titulo3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/logo3"
                        android:layout_toRightOf="@+id/logo3"
                        android:text="@string/item1"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/Titulo3"
                        android:layout_toEndOf="@+id/logo3"
                        android:layout_toRightOf="@+id/logo3"
                        android:text="@string/item2"
                        android:textColor="@android:color/darker_gray"
                        android:layout_alignBottom="@+id/logo3" />
                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo3"
                        android:background="@drawable/img"/>
                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:columnCount="3"
                        android:layout_margin="5dp"
                        android:layout_toRightOf="@id/image3"
                        android:layout_alignParentBottom="true">
                        <TextView
                            android:id="@+id/txt_9"
                            android:text="@string/gd_1"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                        <TextView
                            android:id="@+id/txt_10"
                            android:text="@string/gd_2"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                        <TextView
                            android:id="@+id/txt_11"
                            android:text="@string/gd_3"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:layout_width="60dp" />
                    </GridLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/image3"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item3"
                            android:layout_centerInParent="true"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:layout_margin="10dp"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:tint="@android:color/white"
        />





</android.support.design.widget.CoordinatorLayout>
